--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="items">
            <div id="i1">
-              <img src="/sandwich.jpg" alt="">
+              <img src="sandwich.jpg" alt="">
               <h2>The Perfect Sandwich, A 
                 <br>Real NYC Classic</h2>
                 <p>Just some random text, lorem ipsum text
@@ -25,7 +25,7 @@
 
            </div>
            <div id="i2">
-               <img src="/steak.jpg" alt="">
+               <img src="steak.jpg" alt="">
                <h2>Let Me Tell You About 
                 <br> Steak</h2>
                 <p>Once again, some random text to lorem 
@@ -33,7 +33,7 @@
                     <br> praesent tincidunt ipsum lipsum.</p>
            </div>
            <div id="i3">
-               <img src="/cherries.jpg" alt="">
+               <img src="cherries.jpg" alt="">
                <h2>Cherries, interrupted</h2>
                <p>Lorem ipsum text praesent tincidunt 
                 <br>ipsum lipsum.
@@ -43,20 +43,20 @@
                 What else?</p>
            </div>
            <div id="i4">
-                <img src="/wine.jpg" alt="">
+                <img src="wine.jpg" alt="">
                 <h2>Once Again, Robust
                     <br> Wine and Vegetable Pasta</h2>
                     <p>Lorem ipsum text praesent tincidunt 
                         <br>ipsum lipsum.</p>
            </div>
            <div id="i5">
-                <img src="/popsicle.jpg" alt="">
+                <img src="popsicle.jpg" alt="">
                 <h2>All I Need Is a Popsicle</h2>
                 <p>Lorem ipsum text praesent tincidunt 
                     <br>ipsum lipsum.</p>
            </div>
            <div id="i6">
-                 <img src="/salmon.jpg" alt="">
+                 <img src="salmon.jpg" alt="">
                  <h2>Salmon For Your Skin</h2>
                  <p>Once again, some random text to lorem 
                     <br>lorem lorem lorem ipsum text
@@ -65,7 +65,7 @@
 
            </div>
            <div id="i7">
-                 <img src="/sandwich (1).jpg" alt="">
+                 <img src="sandwich (1).jpg" alt="">
                  <h2>The Perfect Sandwich, A
                     <br>Real Classic
                  </h2>
@@ -75,7 +75,7 @@
             
            </div>
            <div id="i8">
-                  <img src="/croissant.jpg" alt="">
+                  <img src="croissant.jpg" alt="">
                   <h2>Le French</h2>
                   <p>Lorem lorem lorem lorem ipsum text
                     <br> praesent tincidunt ipsum lipsum.</p>
@@ -96,7 +96,7 @@
         <hr>
         <div class="chef">
             <h1>About Me, The Food Man</h1>
-            <img src="/chef.jpg" alt="" style="width: 50%;">
+            <img src="chef.jpg" alt="" style="width: 50%;">
             <h2>I am Who I Am!</h2>
             <p>With Passion For Real, Good Food</p>
             <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world 
@@ -120,14 +120,14 @@
             <div>
                 <h2>BLOG POSTS</h2>
                 <div class="bp">
-                    <img src="/workshop.jpg" alt="" style="height: 50px; width: 50px;  margin-top: 15px; margin-right: 10px;">
+                    <img src="workshop.jpg" alt="" style="height: 50px; width: 50px;  margin-top: 15px; margin-right: 10px;">
                     <p>Lorem
                         <br>
                         Sed mattis nunc</p>
                 </div>
                 <hr>
                 <div class="bp1">
-                    <img src="/gondol.jpg" alt="" style="height: 50px; width: 50px; margin-top: 15px; margin-right: 10px;">
+                    <img src="gondol.jpg" alt="" style="height: 50px; width: 50px; margin-top: 15px; margin-right: 10px;">
                     <P>Ipsum
                         <br>
                         Praes tinci sed</P>
